Remove functional interfaces